--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/dist/css/styles.min.css">
   <title>Document</title>
 </head>
 <body>
-  
+
+
+  <p>Lorem, ipsum.</p>
+
+  <script src="/dist/js/scripts.min.js"></script>
 </body>
 </html>
