--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/dist/css/styles.min.css">
+  <link rel="stylesheet" href="css/styles.min.css">
   <title>Document</title>
 </head>
 <body>
@@ -12,6 +12,7 @@
   </header>
 
   <main>
+    @@include('./src/templates/revolutionary.html')
     @@include('./src/templates/about.html')
   </main>
 
