--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <main>
     @@include('./src/templates/revolutionary.html')
+    @@include('./src/templates/what-you-get.html')
     @@include('./src/templates/about.html')
   </main>
 
