--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
+  <header class="hero-bg">
     @@include('./src/templates/header.html')
+    @@include('./src/templates/hero.html')
   </header>
 
   <main>
