--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     @@include('./src/templates/revolutionary.html')
     @@include('./src/templates/what-you-get.html')
     @@include('./src/templates/about.html')
+    @@include('./src/templates/pricing.html')
   </main>
 
   <script src="js/scripts.min.js"></script>
